--- a/examples/forms/extended.html
+++ b/examples/forms/extended.html
@@ -45,7 +45,7 @@
   </noscript>
   <!-- End Google Tag Manager (noscript) -->
   <div class="wrapper ">
-    <div class="sidebar" data-color="orange">
+    <div class="sidebar" data-color="green">
       <!--
         Tip 1: You can change the color of the sidebar using: data-color="blue | green | orange | red | yellow"
     -->
