--- a/examples/calendar.html
+++ b/examples/calendar.html
@@ -7,7 +7,7 @@
   <link rel="icon" type="image/png" href="../assets/img/favicon.png">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
   <title>
-    Now UI Dashboard PRO by Creative Tim
+    MakerMaker - Dashboard
   </title>
   <meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0, shrink-to-fit=no' name='viewport' />
   <!--     Fonts and icons     -->
@@ -45,16 +45,16 @@
   </noscript>
   <!-- End Google Tag Manager (noscript) -->
   <div class="wrapper ">
-    <div class="sidebar" data-color="orange">
+    <div class="sidebar" data-color="green">
       <!--
         Tip 1: You can change the color of the sidebar using: data-color="blue | green | orange | red | yellow"
     -->
       <div class="logo">
         <a href="http://www.creative-tim.com" class="simple-text logo-mini">
-          CT
+          M
         </a>
         <a href="http://www.creative-tim.com" class="simple-text logo-normal">
-          Creative Tim
+          MakerMaker
         </a>
         <div class="navbar-minimize">
           <button id="minimizeSidebar" class="btn btn-simple btn-icon btn-neutral btn-round">
@@ -71,102 +71,23 @@
           <div class="info">
             <a data-toggle="collapse" href="#collapseExample" class="collapsed">
               <span>
-                James Amos
-                <b class="caret"></b>
+                JinGyu Choi
               </span>
             </a>
-            <div class="clearfix"></div>
-            <div class="collapse" id="collapseExample">
-              <ul class="nav">
-                <li>
-                  <a href="#">
-                    <span class="sidebar-mini-icon">MP</span>
-                    <span class="sidebar-normal">My Profile</span>
-                  </a>
-                </li>
-                <li>
-                  <a href="#">
-                    <span class="sidebar-mini-icon">EP</span>
-                    <span class="sidebar-normal">Edit Profile</span>
-                  </a>
-                </li>
-                <li>
-                  <a href="#">
-                    <span class="sidebar-mini-icon">S</span>
-                    <span class="sidebar-normal">Settings</span>
-                  </a>
-                </li>
-              </ul>
-            </div>
           </div>
         </div>
         <ul class="nav">
-          <li>
+          <li class="active">
             <a href="../examples/dashboard.html">
               <i class="now-ui-icons design_app"></i>
               <p>Dashboard</p>
             </a>
           </li>
           <li>
-            <a data-toggle="collapse" href="#pagesExamples">
-              <i class="now-ui-icons design_image"></i>
-              <p>
-                Pages
-                <b class="caret"></b>
-              </p>
-            </a>
-            <div class="collapse " id="pagesExamples">
-              <ul class="nav">
-                <li>
-                  <a href="../examples/pages/pricing.html">
-                    <span class="sidebar-mini-icon">P</span>
-                    <span class="sidebar-normal"> Pricing </span>
-                  </a>
-                </li>
-                <li>
-                  <a href="../examples/pages/rtl.html">
-                    <span class="sidebar-mini-icon">RS</span>
-                    <span class="sidebar-normal"> RTL Support </span>
-                  </a>
-                </li>
-                <li>
-                  <a href="../examples/pages/timeline.html">
-                    <span class="sidebar-mini-icon">T</span>
-                    <span class="sidebar-normal"> Timeline </span>
-                  </a>
-                </li>
-                <li>
-                  <a href="../examples/pages/login.html">
-                    <span class="sidebar-mini-icon">L</span>
-                    <span class="sidebar-normal"> Login </span>
-                  </a>
-                </li>
-                <li>
-                  <a href="../examples/pages/register.html">
-                    <span class="sidebar-mini-icon">R</span>
-                    <span class="sidebar-normal"> Register </span>
-                  </a>
-                </li>
-                <li>
-                  <a href="../examples/pages/lock.html">
-                    <span class="sidebar-mini-icon">LS</span>
-                    <span class="sidebar-normal"> Lock Screen </span>
-                  </a>
-                </li>
-                <li>
-                  <a href="../examples/pages/user.html">
-                    <span class="sidebar-mini-icon">UP</span>
-                    <span class="sidebar-normal"> User Profile </span>
-                  </a>
-                </li>
-              </ul>
-            </div>
-          </li>
-          <li>
             <a data-toggle="collapse" href="#componentsExamples">
               <i class="now-ui-icons education_atom"></i>
               <p>
-                Components
+                Connect
                 <b class="caret"></b>
               </p>
             </a>
@@ -174,44 +95,38 @@
               <ul class="nav">
                 <li>
                   <a href="../examples/components/buttons.html">
-                    <span class="sidebar-mini-icon">B</span>
-                    <span class="sidebar-normal"> Buttons </span>
+                    <span class="sidebar-mini-icon">G</span>
+                    <span class="sidebar-normal"> GitHub </span>
                   </a>
                 </li>
                 <li>
                   <a href="../examples/components/grid.html">
-                    <span class="sidebar-mini-icon">G</span>
-                    <span class="sidebar-normal"> Grid System </span>
+                    <span class="sidebar-mini-icon">L</span>
+                    <span class="sidebar-normal"> LinkedIn </span>
                   </a>
                 </li>
                 <li>
                   <a href="../examples/components/panels.html">
-                    <span class="sidebar-mini-icon">P</span>
-                    <span class="sidebar-normal"> Panels </span>
+                    <span class="sidebar-mini-icon">G</span>
+                    <span class="sidebar-normal"> Google+ </span>
                   </a>
                 </li>
                 <li>
                   <a href="../examples/components/sweet-alert.html">
-                    <span class="sidebar-mini-icon">SA</span>
-                    <span class="sidebar-normal"> Sweet Alert </span>
+                    <span class="sidebar-mini-icon">F</span>
+                    <span class="sidebar-normal"> Facebook </span>
                   </a>
                 </li>
                 <li>
                   <a href="../examples/components/notifications.html">
-                    <span class="sidebar-mini-icon">N</span>
-                    <span class="sidebar-normal"> Notifications </span>
+                    <span class="sidebar-mini-icon">T</span>
+                    <span class="sidebar-normal"> Twitter </span>
                   </a>
                 </li>
                 <li>
                   <a href="../examples/components/icons.html">
                     <span class="sidebar-mini-icon">I</span>
-                    <span class="sidebar-normal"> Icons </span>
-                  </a>
-                </li>
-                <li>
-                  <a href="../examples/components/typography.html">
-                    <span class="sidebar-mini-icon">T</span>
-                    <span class="sidebar-normal"> Typography </span>
+                    <span class="sidebar-normal"> Instagram </span>
                   </a>
                 </li>
               </ul>
@@ -221,7 +136,7 @@
             <a data-toggle="collapse" href="#formsExamples">
               <i class="now-ui-icons files_single-copy-04"></i>
               <p>
-                Forms
+                Lectures
                 <b class="caret"></b>
               </p>
             </a>
@@ -229,106 +144,27 @@
               <ul class="nav">
                 <li>
                   <a href="../examples/forms/regular.html">
-                    <span class="sidebar-mini-icon">RF</span>
-                    <span class="sidebar-normal"> Regular Forms </span>
+                    <span class="sidebar-mini-icon">NOW</span>
+                    <span class="sidebar-normal"> My Lectures List </span>
                   </a>
                 </li>
                 <li>
                   <a href="../examples/forms/extended.html">
-                    <span class="sidebar-mini-icon">EF</span>
-                    <span class="sidebar-normal"> Extended Forms </span>
+                    <span class="sidebar-mini-icon">END</span>
+                    <span class="sidebar-normal"> Ended Lectures List </span>
                   </a>
                 </li>
                 <li>
                   <a href="../examples/forms/validation.html">
-                    <span class="sidebar-mini-icon">V</span>
-                    <span class="sidebar-normal"> Validation Forms </span>
+                    <span class="sidebar-mini-icon">WISH</span>
+                    <span class="sidebar-normal"> Wish Lectures List </span>
                   </a>
                 </li>
-                <li>
-                  <a href="../examples/forms/wizard.html">
-                    <span class="sidebar-mini-icon">W</span>
-                    <span class="sidebar-normal"> Wizard </span>
-                  </a>
-                </li>
+
               </ul>
             </div>
           </li>
           <li>
-            <a data-toggle="collapse" href="#tablesExamples">
-              <i class="now-ui-icons design_bullet-list-67"></i>
-              <p>
-                Tables
-                <b class="caret"></b>
-              </p>
-            </a>
-            <div class="collapse " id="tablesExamples">
-              <ul class="nav">
-                <li>
-                  <a href="../examples/tables/regular.html">
-                    <span class="sidebar-mini-icon">RT</span>
-                    <span class="sidebar-normal"> Regular Tables </span>
-                  </a>
-                </li>
-                <li>
-                  <a href="../examples/tables/extended.html">
-                    <span class="sidebar-mini-icon">ET</span>
-                    <span class="sidebar-normal"> Extended Tables </span>
-                  </a>
-                </li>
-                <li>
-                  <a href="../examples/tables/datatables.net.html">
-                    <span class="sidebar-mini-icon">DT</span>
-                    <span class="sidebar-normal"> DataTables.net </span>
-                  </a>
-                </li>
-              </ul>
-            </div>
-          </li>
-          <li>
-            <a data-toggle="collapse" href="#mapsExamples">
-              <i class="now-ui-icons location_pin"></i>
-              <p>
-                Maps
-                <b class="caret"></b>
-              </p>
-            </a>
-            <div class="collapse " id="mapsExamples">
-              <ul class="nav">
-                <li>
-                  <a href="../examples/maps/google.html">
-                    <span class="sidebar-mini-icon">GM</span>
-                    <span class="sidebar-normal"> Google Maps </span>
-                  </a>
-                </li>
-                <li>
-                  <a href="../examples/maps/fullscreen.html">
-                    <span class="sidebar-mini-icon">FM</span>
-                    <span class="sidebar-normal"> Full Screen Map </span>
-                  </a>
-                </li>
-                <li>
-                  <a href="../examples/maps/vector.html">
-                    <span class="sidebar-mini-icon">VM</span>
-                    <span class="sidebar-normal"> Vector Map </span>
-                  </a>
-                </li>
-              </ul>
-            </div>
-          </li>
-          <li>
-            <a href="../examples/widgets.html">
-              <i class="now-ui-icons objects_diamond"></i>
-              <p>Widgets</p>
-            </a>
-          </li>
-          <li>
-            <a href="../examples/charts.html">
-              <i class="now-ui-icons business_chart-pie-36"></i>
-              <p>Charts</p>
-            </a>
-          </li>
-          <li class="active">
             <a href="../examples/calendar.html">
               <i class="now-ui-icons media-1_album"></i>
               <p>Calendar</p>
@@ -337,77 +173,13 @@
         </ul>
       </div>
     </div>
-    <div class="main-panel">
-      <!-- Navbar -->
-      <nav class="navbar navbar-expand-lg navbar-transparent  navbar-absolute bg-primary fixed-top">
-        <div class="container-fluid">
-          <div class="navbar-wrapper">
-            <div class="navbar-toggle">
-              <button type="button" class="navbar-toggler">
-                <span class="navbar-toggler-bar bar1"></span>
-                <span class="navbar-toggler-bar bar2"></span>
-                <span class="navbar-toggler-bar bar3"></span>
-              </button>
-            </div>
-            <a class="navbar-brand" href="#pablo">Calendar</a>
-          </div>
-          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navigation" aria-controls="navigation-index" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-bar navbar-kebab"></span>
-            <span class="navbar-toggler-bar navbar-kebab"></span>
-            <span class="navbar-toggler-bar navbar-kebab"></span>
-          </button>
-          <div class="collapse navbar-collapse justify-content-end" id="navigation">
-            <form>
-              <div class="input-group no-border">
-                <input type="text" value="" class="form-control" placeholder="Search...">
-                <div class="input-group-append">
-                  <div class="input-group-text">
-                    <i class="now-ui-icons ui-1_zoom-bold"></i>
-                  </div>
-                </div>
-              </div>
-            </form>
-            <ul class="navbar-nav">
-              <li class="nav-item">
-                <a class="nav-link" href="#pablo">
-                  <i class="now-ui-icons media-2_sound-wave"></i>
-                  <p>
-                    <span class="d-lg-none d-md-block">Stats</span>
-                  </p>
-                </a>
-              </li>
-              <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="http://example.com" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                  <i class="now-ui-icons location_world"></i>
-                  <p>
-                    <span class="d-lg-none d-md-block">Some Actions</span>
-                  </p>
-                </a>
-                <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownMenuLink">
-                  <a class="dropdown-item" href="#">Action</a>
-                  <a class="dropdown-item" href="#">Another action</a>
-                  <a class="dropdown-item" href="#">Something else here</a>
-                </div>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#pablo">
-                  <i class="now-ui-icons users_single-02"></i>
-                  <p>
-                    <span class="d-lg-none d-md-block">Account</span>
-                  </p>
-                </a>
-              </li>
-            </ul>
-          </div>
-        </div>
-      </nav>
-      <!-- End Navbar -->
+
+
+      
       <div class="panel-header">
         <div class="header text-center">
-          <h2 class="title">FullCalendar.io</h2>
-          <p class="category">Handcrafted by our friends from
-            <a target="_blank" href="https://fullcalendar.io/">FullCalendar.io</a>. Please checkout their
-            <a href="https://fullcalendar.io/docs/" target="_blank">full documentation</a>.</p>
+          <h2 class="title">Calendar for Project Management</h2>
+          <p class="category">Check your schedule for lecture projects easily in MakerMaker Calendar!</p>
         </div>
       </div>
       <div class="content">
