edited course information

--- a/examples/dashboard.html
+++ b/examples/dashboard.html
@@ -234,19 +234,19 @@
                       <th class="text-center">
                       </th>
                       <th>
-                        Product
+                        Course Name
                       </th>
                       <th>
-                        Color
+                        Course Level
                       </th>
                       <th>
-                        Size
+                        Duration
                       </th>
                       <th class="text-right">
-                        Price
+                        Tutor
                       </th>
                       <th class="text-right">
-                        Qty
+                        Progress
                       </th>
                     </thead>
                     <tbody>
